--- a/src/SharedComponents/AnimalCard/AnimalCardElement/AnimalCardElement.scss
+++ b/src/SharedComponents/AnimalCard/AnimalCardElement/AnimalCardElement.scss
@@ -1,10 +1,11 @@
 .AnimalCardElement {
-  padding: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  box-shadow: 0 0 3px 0 rgb(126, 126, 126);
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-right: 10px;
   margin-bottom: 10px;
+  border: 1px #333 dashed;
+
   .AnimalCardElement__title {
     font-family: 'Raleway';
     font-weight: 600;
