--- a/src/index.scss
+++ b/src/index.scss
@@ -43,7 +43,7 @@ code {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098d1;
+  background: #b62e3b;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
